# ChangeLog for sci-chemistry/gromacs
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/gromacs/ChangeLog,v 1.20 2007/03/08 01:21:19 weeve Exp $

  08 Mar 2007; Jason Wever <weeve@gentoo.org> gromacs-3.3.1-r1.ebuild:
  Stable on SPARC wrt bug #168182.

  07 Mar 2007; Jeff Gardner <je_fro@gentoo.org> gromacs-3.3.1-r1.ebuild:
  Fix up the demo script so the xterms stay open.

  24 Feb 2007; Raúl Porcel <armin76@gentoo.org> gromacs-3.3.1-r1.ebuild:
  x86 stable wrt bug 168182

  23 Feb 2007; Markus Rothe <corsair@gentoo.org> gromacs-3.3.1-r1.ebuild:
  Stable on ppc64; bug #168182

  07 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -gromacs-3.2.1.ebuild,
  -gromacs-3.3.ebuild, -gromacs-3.3.1.ebuild:
  QA: Removed unused versions.

  20 Dec 2006; Jeff Gardner <je_fro@gentoo.org> gromacs-3.3.1-r1.ebuild:
  Small fix of DEPEND

  20 Dec 2006; Jeff Gardner <je_fro@gentoo.org> ChangeLog:
  Many thanks to Rene Meier, Shvetsov Alexey Mathias Weigt, dawe, and Mike
  Hlavac for their contributions to gromacs-3.3.1-r1.

*gromacs-3.3.1-r1 (17 Dec 2006)

  17 Dec 2006; Jeff Gardner <je_fro@gentoo.org> +gromacs-3.3.1-r1.ebuild:
  Fixup to address bugs 135146 118421 and 147614.

  20 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  (#148281) Change herd to sci-chemistry from sci.

*gromacs-3.3.1 (08 Aug 2006)

  08 Aug 2006; Markus Dittrich <markusle@gentoo.org> +gromacs-3.3.1.ebuild:
  Version bump. Ebuild now inherits the fortran.eclass and forces
  the use of g77 since gfortran is presently missing some of the 
  fortran intrinsics needed by gromacs. See bug #141672.

  05 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Remove myself as maintainer, anyone feel free to work on this, although I'll
  continue to do so as well.

  07 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Update to my new email address.
