@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX gromacs-alpha-axp_asm.patch 613 RMD160 56a617d34b9aa96f71cb84124271107d56557773 SHA1 96518a8fa20c0d597b5cb26b843f28f26d998942 SHA256 d6ae7d258e975a0c12a8b09bef11874eb0e25d4708f299b3e265c97ada69afee
 MD5 aa14e5e53e2eb5409072fd53896b4578 files/gromacs-alpha-axp_asm.patch 613
 RMD160 56a617d34b9aa96f71cb84124271107d56557773 files/gromacs-alpha-axp_asm.patch 613
@@ -12,14 +15,14 @@ EBUILD gromacs-3.2.1-r1.ebuild 1975 RMD160 ff5dfc572d27eda698c76845a88f58422bfab
 MD5 9b6492c32d8c96d94266e78f314fdcf4 gromacs-3.2.1-r1.ebuild 1975
 RMD160 ff5dfc572d27eda698c76845a88f58422bfabccc gromacs-3.2.1-r1.ebuild 1975
 SHA256 b5b43f7f1d032e64f95b1247530404556db7a57e623c9ceaf4384f2c7f65b0ef gromacs-3.2.1-r1.ebuild 1975
-EBUILD gromacs-3.3.1-r1.ebuild 5715 RMD160 3d1d648cdbde737f141bacfb8b0ae7577d095546 SHA1 2cc17e7d01f9997bcf5d66d8bcf8252cadf04d53 SHA256 c91b24681aabcc58757eba31b2ba3b8b2b7c763a4ceb829055bc34037e28189c
-MD5 b2f360abc3c4994f3b1f82270b328f86 gromacs-3.3.1-r1.ebuild 5715
-RMD160 3d1d648cdbde737f141bacfb8b0ae7577d095546 gromacs-3.3.1-r1.ebuild 5715
-SHA256 c91b24681aabcc58757eba31b2ba3b8b2b7c763a4ceb829055bc34037e28189c gromacs-3.3.1-r1.ebuild 5715
-MISC ChangeLog 5741 RMD160 69b5558c7a8615c17ffefa434a02763891827dbd SHA1 7d31f106d98624956289b2bfb956f96302999442 SHA256 ee7ade28ccf27d6d5db5e63f1930143fa14a7b584e0e2b9005325f836be5d0db
-MD5 ab8a5e2c7fb6d16a7a8ce1a30a7f373c ChangeLog 5741
-RMD160 69b5558c7a8615c17ffefa434a02763891827dbd ChangeLog 5741
-SHA256 ee7ade28ccf27d6d5db5e63f1930143fa14a7b584e0e2b9005325f836be5d0db ChangeLog 5741
+EBUILD gromacs-3.3.1-r1.ebuild 5780 RMD160 dba80b418f8e763539de6ddb80e57254fed0ed09 SHA1 cc2ddc7850760d483ba56d4c84c01ddf04b7624b SHA256 af3440832035a01607e70f7f9f16ef8250a78d36c28ab2b8ed64e76f76d1ca53
+MD5 f94b2d444354187d2973e90742942910 gromacs-3.3.1-r1.ebuild 5780
+RMD160 dba80b418f8e763539de6ddb80e57254fed0ed09 gromacs-3.3.1-r1.ebuild 5780
+SHA256 af3440832035a01607e70f7f9f16ef8250a78d36c28ab2b8ed64e76f76d1ca53 gromacs-3.3.1-r1.ebuild 5780
+MISC ChangeLog 5871 RMD160 0bb07325132f600099a184807047e00456d17e5f SHA1 5307213fa7da8513259daabc65cd813122fb2cd6 SHA256 1cdd2b848690ffe55ee790982bf338959bb468b195c3b6f9df5e2c2b3cc14db3
+MD5 412e3a9818ffd8ec0553d279fdcc733d ChangeLog 5871
+RMD160 0bb07325132f600099a184807047e00456d17e5f ChangeLog 5871
+SHA256 1cdd2b848690ffe55ee790982bf338959bb468b195c3b6f9df5e2c2b3cc14db3 ChangeLog 5871
 MISC metadata.xml 166 RMD160 4452298fd03e7c9395d1182bfe69d60a14144af6 SHA1 cb0b513473c0348f4f6f6cd9a132e4884155fddb SHA256 84c92b49702daf95eace8d2765215cbd8650da4ef776f9f700b5ce3785dec852
 MD5 43628e9f5743b5c3b018a82669a76bc7 metadata.xml 166
 RMD160 4452298fd03e7c9395d1182bfe69d60a14144af6 metadata.xml 166
@@ -30,3 +33,10 @@ SHA256 c24822d0c5dd0545585fa9ebe51c7a1126da729c375ca035c3baaddd5d2d454b files/di
 MD5 0ad487900dfecda21c7258f45d995525 files/digest-gromacs-3.3.1-r1 244
 RMD160 427f90b98362a786e7d5fca69d9069742b943ebf files/digest-gromacs-3.3.1-r1 244
 SHA256 2eaa348fdc15b37c1fb15fb5394f6a26578c22bfd21ea4e719ba6308bbab40fc files/digest-gromacs-3.3.1-r1 244
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.3 (GNU/Linux)
+
+iD8DBQFF9ESSI1lqEGTUzyQRAtkNAJ9rWqiJRvuXyTtp7a635hH01D7EmQCfZox8
+ITbG/xeyEOo9EZKzqoe/MTk=
+=PFKl
+-----END PGP SIGNATURE-----
